--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -30,3 +30,7 @@ a,a:hover { text-decoration: none;cursor:pointer;}
 		
 	}
 }
+
+#scrollbar{
+	float:right !important;
+}
